@@ -15,6 +15,8 @@ bzr-svn 0.6.1                    UNRELEASED
    * Use xdg cache directory (~/.cache/bzr-svn usually) if the Python XDG
      module is available.
 
+   * Handle hidden revisions properly during branch fetch.
+
 bzr-svn 0.6.0                    2009-05-20
 
   FEATURES
